# pocket-tts

./: AGENTS.md  pyproject.toml
pocket_tts/: main.py  quantization.py
pocket_tts/conditioners/: base.py  text.py
pocket_tts/config/: a0ac5076.yaml
pocket_tts/data/: audio.py  audio_utils.py
pocket_tts/models/: flow_lm.py  mimi.py  tts_model.py
pocket_tts/modules/: conv.py  dummy_quantizer.py  layer_scale.py  mimi_transformer.py  mlp.py  resample.py  rope.py  seanet.py  stateful_module.py  transformer.py
pocket_tts/utils/: config.py  debugging.py  utils.py  weights_loading.py
tests/: test_documentation_examples.py
